# bm-tracker

./: CMakeLists.txt  README.md
include/bm_tracker/: features.h  frame.h  tracker.h
tests/: sample_config.json
